Fixed event view layout issues.

--- a/src/public/css/bootstrap.css
+++ b/src/public/css/bootstrap.css
@@ -6850,8 +6850,8 @@ button.close {
 	padding: 15px;
 }
 .container .participants .profile .image{
-	height: 100px;
-	width: 100px;
+	height: 70px;
+	width: 70px;
 }
 
 .container .participants .profile .name{
